--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,16 @@
-alembic==1.4.3
-appdirs==1.4.3
-atomicwrites==1.4.0
-attrs==20.2.0
-backcall==0.2.0
-black==20.8b1
-blinker==1.4
-CacheControl==0.12.6
-cachy==0.3.0
-certifi==2020.6.20
-chardet==3.0.4
-cleo==0.8.1
-click==7.1.2
-clikit==0.6.2
-colorama==0.4.3
-crashtest==0.3.1
-decorator==4.4.2
--e git+https://github.com/fredsonchaves07/flask-delivery.git@4059d9251aba134ead5ca1c48620395260996471#egg=delivery
-distlib==0.3.1
-dnspython==2.0.0
-dominate==2.6.0
-dynaconf==3.1.2
-email-validator==1.1.1
-filelock==3.0.12
-flake8==3.8.3
-Flask==1.1.2
-Flask-Admin==1.5.6
-Flask-Bootstrap==3.3.7.1
-Flask-DebugToolbar==0.11.0
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.3
-Flask-Moment==0.10.0
-flask-shell-ipython==0.4.1
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-html5lib==1.1
-idna==2.10
-iniconfig==1.0.1
-ipdb==0.13.3
-ipython==7.18.1
-ipython-genutils==0.2.0
-isort==5.4.2
-itsdangerous==1.1.0
-jedi==0.17.2
-Jinja2==2.11.2
-keyring==21.4.0
-lockfile==0.12.2
-Mako==1.1.3
-MarkupSafe==1.1.1
-mccabe==0.6.1
-msgpack==1.0.0
-mypy-extensions==0.4.3
-packaging==20.4
-parso==0.7.1
-pastel==0.2.1
-pathspec==0.8.0
-pexpect==4.8.0
-pickleshare==0.7.5
-pkginfo==1.6.1
-pluggy==0.13.1
-poetry==1.1.4
-poetry-core==1.0.0
-prompt-toolkit==3.0.7
-ptyprocess==0.6.0
-py==1.9.0
-pyasn1==0.4.8
-pycodestyle==2.6.0
-pyflakes==2.2.0
-Pygments==2.6.1
-pylev==1.3.0
-pyparsing==2.4.7
-pysmb==1.2.5
-pytest==6.1.1
-pytest-flask==1.0.0
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-editor==1.0.4
-pywin32-ctypes==0.2.0
-regex==2020.7.14
-requests==2.24.0
-requests-toolbelt==0.9.1
-shellingham==1.3.2
-six==1.15.0
-SQLAlchemy==1.3.20
-toml==0.10.1
-tomlkit==0.7.0
-traitlets==5.0.0
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-urllib3==1.25.11
-virtualenv==20.1.0
-visitor==0.1.3
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==1.0.1
-wget==3.2
-WTForms==2.3.3
+click
+Flask
+Flask-Login
+Flask-SQLAlchemy
+itsdangerous
+MarkupSafe
+SQLAlchemy
+Werkzeug
+flask_migrate
+unittest
+flask_mail
+threading
+flask_moment
+flask_bootstrap
+flask_wtf
+wtforms
